data/collection/fixes/descriptions/java/JDK-8215625
...
/scratch/mesos/jib-master/install/jdk13-jdk.19/src.full/open/test/jdk/javax/sql/testng/test/rowset/cachedrowset/CachedRowSetTests.java:31: error: newInstance() in CachedRowSetTests cannot override <T>newInstance() in CommonRowSetTests
    protected CachedRowSet newInstance() throws SQLException {
                           ^
  return type CachedRowSet is not compatible with T
  where T is a type-variable:
    T extends RowSet declared in method <T>newInstance()
/scratch/mesos/jib-master/install/jdk13-jdk.19/src.full/open/test/jdk/javax/sql/testng/test/rowset/joinrowset/JoinRowSetTests.java:54: error: newInstance() in JoinRowSetTests cannot override <T>newInstance() in CommonRowSetTests
    protected JoinRowSet newInstance() throws SQLException {
                         ^
  return type JoinRowSet is not compatible with T
  where T is a type-variable:
    T extends RowSet declared in method <T>newInstance()
/scratch/mesos/jib-master/install/jdk13-jdk.19/src.full/open/test/jdk/javax/sql/testng/test/rowset/webrowset/WebRowSetTests.java:31: error: newInstance() in WebRowSetTests cannot override <T>newInstance() in CommonRowSetTests
    protected WebRowSet newInstance() throws SQLException {
                        ^
  return type WebRowSet is not compatible with T
  where T is a type-variable:
    T extends RowSet declared in method <T>newInstance()
...
/scratch/mesos/jib-master/install/jdk13-jdk.19/src.full/open/test/jdk/javax/sql/testng/test/rowset/filteredrowset/FilteredRowSetTests.java:51: error: newInstance() in FilteredRowSetTests cannot override <T>newInstance() in CommonRowSetTests
    protected FilteredRowSet newInstance() throws SQLException {
                             ^
  return type FilteredRowSet is not compatible with T
  where T is a type-variable:
    T extends RowSet declared in method <T>newInstance()